...
- (void)viewDidLoad {
    [super viewDidLoad];
    // Do any additional setup after loading the view.
    
    self.totalArray = [[NSMutableArray alloc]init];
    
    self.lScale = @[@"No latch obtained",@"Repeated attempts",@"Rhythmic suckling"];
    
    self.aScale = @[@"None",@"A few with stimulation",@"Spontaneous"];
    
    self.tScale = @[@"Inverted",@"Flat",@"Everted"];
    
    self.cScale = @[@"Engorged Cracked",@"Filling",@"Soft Tender Intact nipples"];
    
    self.hScale = @[@"Full assist",@"Minimal assist",@"No assist"];
    
    //    self.lScale = @[@"Too sleepy or reluctant, No latch obtained",@"Repeated attempts Must hold nipple in mouth Must stimulate to suck",@"Grasps breast, Tongue down and forward, Lips flanged,Rhythmic suckling"];
    //
    //    self.aScale = @[@"None",@"A few with stimulation",@"Spontaneous, intermittent (less than 24 hours old) Spontaneous, frequent (greater than 24 hours old)"];
    //
    //    self.tScale = @[@"Inverted",@"Flat",@"Everted (after stimulation)"];
...
