...
            [[[[self.tabBarController tabBar]items]objectAtIndex:1]setEnabled:FALSE];
            [[[[self.tabBarController tabBar]items]objectAtIndex:2]setEnabled:FALSE];
            [[[[self.tabBarController tabBar]items]objectAtIndex:3]setEnabled:FALSE];
            [[[[self.tabBarController tabBar]items]objectAtIndex:4]setEnabled:FALSE];
    [self loadtable];
    
    UIAlertController * alert = [UIAlertController alertControllerWithTitle:@"Already Info Saved" message:@"Enter the email to load data" preferredStyle:UIAlertControllerStyleAlert];
    
    UIAlertAction *defaultAction = [UIAlertAction actionWithTitle:@"OK" style:UIAlertActionStyleCancel handler:^(UIAlertAction *action) {}];
    
    [alert addAction:defaultAction];
    
    [self presentViewController:alert animated:YES completion:nil];
    
    //    self.mothername.delegate = self;
...
        
        [alert addAction:defaultAction];
    }
    
    else{
        
        UIAlertController *alert = [UIAlertController alertControllerWithTitle:@"Data Loaded" message:@"" preferredStyle:UIAlertControllerStyleAlert];
        
        UIAlertAction* defaultAction = [UIAlertAction actionWithTitle:@"OK" style:UIAlertActionStyleCancel handler:^(UIAlertAction * action) {}];
        
        [alert addAction:defaultAction];
        [self presentViewController:alert animated:YES completion:nil];
        
...
        [[[[self.tabBarController tabBar]items]objectAtIndex:1]setEnabled:TRUE];
        [[[[self.tabBarController tabBar]items]objectAtIndex:2]setEnabled:TRUE];
        [[[[self.tabBarController tabBar]items]objectAtIndex:3]setEnabled:TRUE];
        [[[[self.tabBarController tabBar]items]objectAtIndex:4]setEnabled:TRUE];
        //[self Submituser];
        [self saveData];
            UIAlertController * alert = [UIAlertController alertControllerWithTitle:@"Saved" message:@"" preferredStyle:UIAlertControllerStyleAlert];
            
            UIAlertAction *defaultAction = [UIAlertAction actionWithTitle:@"OK" style:UIAlertActionStyleCancel handler:^(UIAlertAction *action) {}];
            
            [alert addAction:defaultAction];
            
            [self presentViewController:alert animated:YES completion:nil];
...
